2016-05-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* NEWS: Update with news since 6.1 release.

2016-05-22  Ingo Feinerer  <feinerer@logic.at>  (tiny change)

	* util/texi2dvi (run_tex, make_openout_test): Use parentheses 
	around "eval" command in order not to exit prematurely due to 
	"set -e" with ksh under OpenBSD.

2016-05-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi) <@abbr and @acronym>: Don't 
	set 'normalized' values on elements.  Remove commented-out code.
	(module documentation): Don't document that a list of the 
	elements is kept in $self->{'explained_commands'}.  

2016-05-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Structuring.pm (associate_internal_references): 
	Avoid adding an undefined 'label' value under certain 
	circumstances.

2016-05-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_abort_empty_line): Remove a 
	'spaces_after_command' empty extra value, just as an empty
	'spaces_before_argument' value is removed.  This stops an 
	'empty_line_after_command' element lingering as an extra value.

2016-05-07  John Collins  <jcc8@psu.edu>  (tiny change)

	* doc/texinfo.tex (\typeout): New macro defined like in LaTeX for
	ensuring message are identical in format as those output by
	latex/pdflatex.
	(\requireopenindexfile): \typeout trace Writing index file.
	(\printindex) \typeout trace No file.

2016-05-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\mylbrace, \myrbrace): Avoid use of \ecfont, 
	because the user may not have it installed.  Use \lbrace and 
	\rbrace from plain TeX instead.
	* doc/texinfo-tex-test.texi (Test of non-alphanumeric characters):
	New section.

2016-05-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\commondummies): Define \value as a dummy.
	Do not call \makevalueexpandable.
	(\xrdef, \refx, \xrefX): Give \value a definition so we can get 
	rid of it when making a control sequence name for a 